@@ -7,6 +7,10 @@ version 2.10.8:
 	General:
 	* Add support for Python3 in build scripts. (Ashish Gupta) (#15624)
 
+	Gadu-Gadu:
+	* Disabled buddy list import/export from/to server (it didn't worked
+	  anymore). Buddy list synchronization will be implemented in 3.0.0.
+
 	Windows-Specific Changes:
 	* Updates to dependencies:
 		* NSS 3.14.3 and NSPR 4.9.5
